--- a/src/app/main/matches/matches.html
+++ b/src/app/main/matches/matches.html
@@ -161,16 +161,16 @@
                                 <div style="text-transform: uppercase;text-align: center;">
 
                                     <div class="col-md-4"
-                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
+                                         style="padding: 20px;cursor:pointer;border: 1px solid #eef1f5;background-color: gainsboro;text-align: center">
                                         <i class="fa fa-phone"></i> Call now
                                     </div>
                                     <div class="col-md-4"
-                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: gainsboro"><i
+                                         style="padding: 20px;cursor:pointer;border: 1px solid #eef1f5;background-color: gainsboro"><i
                                             class="fa fa-commenting-o"></i> Chat now
                                     </div>
                                     <div class="col-md-4"
-                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a"><i
-                                            class="fa fa-heart" style="color: white!important;font-size: 18px"></i> Send
+                                         style="padding: 20px;border: 1px solid #eef1f5;background-color: #e7505a;cursor:pointer;color: white!important;"><i
+                                            class="fa fa-heart" style="font-size: 18px"></i> Send
                                         Interest
                                     </div>
 
