--- a/src/app/main/settings/accountsettings/accountSettings.html
+++ b/src/app/main/settings/accountsettings/accountSettings.html
@@ -23,7 +23,11 @@
                         <div class="portlet-body form form-horizontal">
 <p> A valid e-mail id will be used to send you partner search mailers, member to member communication mailers and special offers.</p>
 <hr>
+
+
                             <div class="form-group">
+                                <div class="col-md-12" style="text-align: center;color: red">{{emailMsg}}</div>
+
 
                                 <div class="col-md-12">
                                     <label class=" uppercase  "> Email ID</label>
