--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -43,7 +43,7 @@
                                         <h4 class="heading"> Quick Link</h4>
                                     </div>
                                     <div class="col-md-12">
-                                        <span class="description"><a ui-sref="terms"  target="_blank"> Privacy Policy</a>| <a ui-sref="terms" target="_blank">Terms of Use</a> | Advertise with us </span>
+                                        <span class="description"><a ui-sref="terms"  target="_blank"> Privacy Policy</a>| <a ui-sref="terms" target="_blank">Terms of Use</a> | <a ui-sref="businessEnquires" target="_blank">Advertise with us</a> </span>
                                     </div>
                                 </div>
                             </div>
