--- a/src/app/main/profile/editProfile/profile.html
+++ b/src/app/main/profile/editProfile/profile.html
@@ -1120,7 +1120,7 @@
 
                     </div>
                 </div>
-                <div class="col-md-12 ">
+                <div class="col-md-12 " >
                     <!-- BEGIN SAMPLE FORM PORTLET-->
                     <div class="portlet light border-rounded">
                         <div class="portlet-title">
@@ -1460,7 +1460,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-12 ">
+                <div class="col-md-12 " id="partnerPreferences">
                     <!-- BEGIN SAMPLE FORM PORTLET-->
                     <div class="portlet light border-rounded">
                         <div class="portlet-title">
@@ -1508,7 +1508,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-12">
+                <div class="col-md-12" >
                     <h2 style="color:#2db19a;font-weight: bold">Partner Preferences</h2>
                 </div>
 
