--- a/src/app/navigation/dashboard/dbNavigation.html
+++ b/src/app/navigation/dashboard/dbNavigation.html
@@ -29,10 +29,10 @@
                                                         </span>
                                                     </div>
                                                     <div class="col-md-12">
-                                                        <span class="menu-option"><a style="color: red" ui-sref="profile">Edit Profile</a></span>
+                                                        <span class="menu-option"><a style="color: red" ng-click="redirectURL('profile')">Edit Profile</a></span>
                                                     </div>
                                                     <div class="col-md-12">
-                                                        <span class="menu-option"><a style="color: red" ui-sref="profile">
+                                                        <span class="menu-option"><a style="color: red" ng-click="redirectURL('partner')">
                                                             Edit Partner Preferences</a>
                                                         </span>
                                                     </div>
