--- a/src/app/main/message/inbox/pending/messagePending.html
+++ b/src/app/main/message/inbox/pending/messagePending.html
@@ -138,7 +138,7 @@
 
                                     <span ng-if="item.action == 'connect'">YES</span>
 									<span ng-if="item.action == 'field'"><span
-                                            ng-if="item.field_name == 'photo_request'">Add Photo Requested </span>
+                                            ng-if="item.field_name == 'photo_request'">Add Photo</span>
 									<span ng-if="item.field_name == 'smoking'">Add Smoking   </span>
 									<span ng-if="item.field_name == 'drinking'">Add Drinking   </span>
 									<span ng-if="item.field_name == 'income'">Add Income   </span>
