--- a/src/app/main/message/inbox/accepted/messageAccepted.html
+++ b/src/app/main/message/inbox/accepted/messageAccepted.html
@@ -117,15 +117,15 @@
                                 <span ng-if="item.action == 'connect'">INTEREST ACCEPTED
                                     </span>
 								<span ng-if="item.action == 'field'">
-									<span ng-if="item.field_name == 'photo_request'">Photo Request ACCEPTED </span>
-									<span ng-if="item.field_name == 'smoking'">Add Smoking Request ACCEPTED </span>
-									<span ng-if="item.field_name == 'drinking'">Add Drinking Request ACCEPTED </span>
-									<span ng-if="item.field_name == 'income'">Add Income Request ACCEPTED </span>
-									<span ng-if="item.field_name == 'education'">Add Education Request ACCEPTED </span>
-									<span ng-if="item.field_name == 'family'">Add Family Request Declined </span>
-									<span ng-if="item.field_name == 'family_status'">Add Family Status Request ACCEPTED </span>
-									<span ng-if="item.field_name == 'origin'">Add Origin Request ACCEPTED </span>
-									<span ng-if="item.field_name == 'about_family'">Add About Family Request ACCEPTED </span>
+									<span ng-if="item.field_name == 'photo_request'">Photo  Accepted </span>
+									<span ng-if="item.field_name == 'smoking'">Smoking Details Accepted </span>
+									<span ng-if="item.field_name == 'drinking'">Drinking Details Accepted </span>
+									<span ng-if="item.field_name == 'income'">Income Details Accepted </span>
+									<span ng-if="item.field_name == 'education'">Education Details Accepted </span>
+									<span ng-if="item.field_name == 'family'">Family Details Accepted </span>
+									<span ng-if="item.field_name == 'family_status'">Family Status Details Accepted </span>
+									<span ng-if="item.field_name == 'origin'">Origin Details Accepted </span>
+									<span ng-if="item.field_name == 'about_family'">About Family Details Accepted </span>
 
 
 								</span>
