--- a/src/app/main/message/inbox/pending/messagePending.html
+++ b/src/app/main/message/inbox/pending/messagePending.html
@@ -152,7 +152,7 @@
 									</span>
 
                                 </button>
-                                <button type="button" ng-click="respondAction(item,'declined')"
+                                <button type="button" ng-click="requestDeclined(item)"
                                         class=" uppercase btn btn-default input-rounded" ng-click="">
                                     NOT INTERESTED
                                 </button>
