--- a/src/app/main/login/loginContent.html
+++ b/src/app/main/login/loginContent.html
@@ -373,7 +373,7 @@
         </div>
         <div class="form-group">
             <label class="checkbox-inline" class="custon-text">
-                <input type="checkbox" icheckbox_flat-red class="icheck "> Remember me</label>
+                <input type="checkbox" icheckbox_flat-red class="icheck " ng-model="terms.remember"> Remember me</label>
             <label class="pull-right"><a href="" class="font-red-mint" ng-click="vm.forgotPassword()"> Forgot your password?</a></a></label>
         </div>
     </div>
