--- a/src/app/toolbar/dashboard/dbToolbar.html
+++ b/src/app/toolbar/dashboard/dbToolbar.html
@@ -188,11 +188,11 @@
                                     </li>
                                     <li class="divider" style="margin-top: 0px"></li>
                                     <li>
-                                        <a ui-sref="profile">
+                                        <a ng-click="redirectURL('profile')">
                                             <i class="icon-user"></i> Edit Profile </a>
                                     </li>
                                     <li>
-                                        <a ui-sref="profile">
+                                        <a ng-click="redirectURL('partner')">
                                             <i class="icon-user"></i> Edit Partner Preference </a>
                                     </li>
                                     <li>
